--- a/styles/Wave.module.scss
+++ b/styles/Wave.module.scss
@@ -16,7 +16,7 @@
     display: none;
     position: absolute;
     top: 0;
-    right: calc(var(--yellow-width) - 15px);
+    right: calc(var(--yellow-width) - 10px);
     height: 100%;
 
     path {
